--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/rapier": "^1.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "meshline": "^3.3.1",
     "react": "^19.0.0",
