--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@react-three/drei": "^10.0.1",
     "@react-three/fiber": "^9.0.4",
     "@react-three/rapier": "^1.5.0",
+    "@tailwindcss/vite": "^4.0.9",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
+    "matter-js": "^0.20.0",
     "meshline": "^3.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.9",
     "three": "^0.173.0"
   },
   "devDependencies": {
