--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^4.1.4",
     "matter-js": "^0.20.0",
     "meshline": "^3.3.1",
     "react": "^19.0.0",
