--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@tailwindcss/vite": "^4.0.9",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "matter-js": "^0.20.0",
     "meshline": "^3.3.1",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "three": "^0.173.0"
   },
