--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.0.1",
     "@react-three/fiber": "^9.0.4",
     "@react-three/rapier": "^1.5.0",
+    "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.9",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
